--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
 
 </head>
 <body>
+
+    <form>
+        <label for="title">title</label>
+        <input id="title" type="text" placeholder="what is the title?">
+        <label for="body">Status</label>
+        <input id="body" type="text" placeholder="Write what is on your mind">
+        <label for="user_id"> User ID</label>
+        <input type="number" id="user_id" placeholder="your id please"> 
+        <input id="submit" type="submit" value="post">
+    </form>
+    <form id="two">
+        <label for="update_title">Change Title</label>
+        <input type="text" id="update_title" placeholder="change title">
+        <input type="submit" id="post" value="patch">
+    </form>
+    <input type="submit" id="delete" value="delete">
+    <input type="submit" id="get" value="get">
+
+
+    <div id="box">
+
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
  <script src="js/app.js"> </script>
 </body>
 </html>
